--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
         let resElement = document.querySelector('#app div');
 
         function gerarNumero() {
-
             if(inputElement.value <= 0 || inputElement.value > 9){
                 alert('Por favor digite um valor válido (entre 1 e 9)');
                 inputElement.value = '';
                 resElement.innerHTML = '';
+            }else {
+                let numSorteados = []
+    
+                while(numSorteados.length < inputElement.value) {
+                    let numGerado = Math.floor(Math.random() * 60);
+                    if(! numSorteados.includes(numGerado)) {
+                        numSorteados.push(numGerado);
+                    };
+                }
+                resElement.innerHTML = '';
+                inputElement.value = '';
+                resElement.innerHTML = `Os números sorteados são: ${numSorteados}`;
             }
 
-            let numSorteados = []
-
-            while(numSorteados.length < inputElement.value) {
-                let numGerado = Math.floor(Math.random() * 60);
-                if(! numSorteados.includes(numGerado)) {
-                    numSorteados.push(numGerado);
-                };
-            }
-            resElement.innerHTML = '';
-            inputElement.value = '';
-            resElement.innerHTML = `Os números sorteados são: ${numSorteados}`;
             
         };
 
