--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
         <h1>Sorteador</h1>
 
-        <input type="text" placeholder="Quantos números sortear">
+        <input type="number" placeholder="Quantos números sortear">
         <button>Sortear</button>
 
         <div>
